Update Bachelor Thesis Code.ipynb

--- a/Python Code/Bachelor Thesis Code.ipynb
+++ b/Python Code/Bachelor Thesis Code.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ct_offset = pd.read_csv('/Users/theomoers/Documents/WU Wien/Bachelor thesis/Data analysis/arboc_issuance_ev2.csv', sep = ';')\n",
+    "ct_offset = pd.read_csv('Filepath/arboc_issuance_ev2.csv', sep = ';')\n", # Replace filepath
     "ct_offset = ct_offset.drop(columns=['Early Action/ Compliance', 'Section 95989(b) Documentation, if applicable', 'Project Documentation', 'Technical Advisor.1', 'Provides DEBS', 'Retired 1st Compliance Period (CA)', 'Retired 2nd Compliance Period (CA)', 'Retired 3rd Compliance Period (CA)', 'Retired for Compliance in Quebec', 'Comment'])"
    ]
   },
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "opos = pd.read_csv('/Users/theomoers/Documents/WU Wien/Bachelor thesis/Data analysis/NP_values_projectrevenue-v2.csv', sep = ',')\n",
+    "opos = pd.read_csv('Filepath/NP_values_projectrevenue-v2.csv', sep = ',')\n", # Replace filepath
     "opos[\"Baseline\"] = opos[\"Baseline\"].map('{:.0f}'.format)\n",
     "opos.tail()"
    ]
