Update Bachelor Thesis Code.ipynb

--- a/Python Code/Bachelor Thesis Code.ipynb
+++ b/Python Code/Bachelor Thesis Code.ipynb
@@ -33,7 +33,7 @@
    "id": "1625c7a2-0d6e-48bb-ba09-0e063841b936",
    "metadata": {},
    "source": [
-    "The carbon offset project data was downloaded in September 2022 from the CARB website: https://ww2.arb.ca.gov/our-work/programs/compliance-offset-program. The dataset includes several columns that are not relevant in this analysis."
+    "The carbon offset project data was downloaded in September 2022 from the CARB website: https://ww2.arb.ca.gov/our-work/programs/compliance-offset-program. The dataset includes several columns that are not relevant in this analysis. Replace filepath"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ct_offset = pd.read_csv('Filepath/arboc_issuance_ev2.csv', sep = ';')\n", # Replace filepath
+    "ct_offset = pd.read_csv('Filepath/arboc_issuance_ev2.csv', sep = ';')\n", 
     "ct_offset = ct_offset.drop(columns=['Early Action/ Compliance', 'Section 95989(b) Documentation, if applicable', 'Project Documentation', 'Technical Advisor.1', 'Provides DEBS', 'Retired 1st Compliance Period (CA)', 'Retired 2nd Compliance Period (CA)', 'Retired 3rd Compliance Period (CA)', 'Retired for Compliance in Quebec', 'Comment'])"
    ]
   },
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "opos = pd.read_csv('Filepath/NP_values_projectrevenue-v2.csv', sep = ',')\n", # Replace filepath
+    "opos = pd.read_csv('Filepath/NP_values_projectrevenue-v2.csv', sep = ',')\n", 
     "opos[\"Baseline\"] = opos[\"Baseline\"].map('{:.0f}'.format)\n",
     "opos.tail()"
    ]
